Version 5.4.0
- Added some preliminary support for 64 bit integers (not complete yet)
- Added error for testp or testb used without flags
- Added --tabs=N for specifying amount of indent due to tabs
- Fix incorrect types in some const initializations.
- Fixed a problem with comments in the preprocessor
- Fixed incorrect line numbers after ASMCLK
- Fixed a bug in counting parameters when some are structs
- Fixed a bug in initializing arrays with modifiers like const
- Fixed parsing of ?: in Spin2
- Fixed some union initializer bugs
- Fixed setnib/setbyte/setword encoding for abbreviated forms
- Fixed an optimizer bug in loop strength reduction
- Handle mixed float/int in C ?: operator by promoting one side as necessary
- Made some low level C functions builtins
- Made FCACHE size settable on P2
- Support debug_baud macro to some degree
- Set default baud rate for C and BASIC based on -D_BAUD=n macro
- Tweaked listing file output slightly to include comments at end of file

Version 5.3.2
- Accept ' as a digit separator as well as '_' (C++14 uses single quote)
- Avoid FCACHE in FCACHE (e.g. for loops with empty org/end)
- Disable inlining for functions explicitly placed in COG or LUT memory
- Cleaned up ABORT handling to be Spin2 compatible
- Improved removal of DEBUG() statements when -g is left out
- Some internal changes for 64 bit support (still a work in progress)
- Support ptrx[N] syntax in inline assembly

Version 5.3.1
- Added aliases for _pinw, _pinl, and _pinh in Spin (to match the documentation).
- Better error messages for some bad C function declarations.
- Cleaned up operator precedence to match Spin2
- Fixed typos in SmartSerial.spin that made it stop working
- Improved accuracy of parsing floating point constants.
- Provided default dummy functions for send() and recv()

Version 5.3.0
- Added SimpleSerial object for P1/P2 compatibility
- Added _lockrel() function for C