@@ -1944,6 +1944,7 @@ struct reservedword basic_keywords[] = {
   { "fixed", BAS_FIXED },
   { "for", BAS_FOR },
   { "function", BAS_FUNCTION },
+  { "__function__", BAS_FUNC_NAME },
   { "get", BAS_GET },
   { "goto", BAS_GOTO },
   { "gosub", BAS_GOSUB },
@@ -2043,6 +2044,8 @@ struct reservedword c_keywords[] = {
   { "float", C_FLOAT },
   { "for", C_FOR },
   { "__fromfile", C_FROMFILE },
+  { "__func__", C_FUNC },
+  { "__FUNCTION__", C_FUNC },
   { "goto", C_GOTO },
   { "if", C_IF },
   { "_Imaginary", C_IMAGINARY },
